# mylang

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  add.wat  crates.js  drawing.s  eslint.config.js  hello.s  help.html  index.html  mylang.sln  package.json  paket.dependencies  pyproject.toml  search-index.js  settings.html  source-files.js  src-files.js  tsconfig.json
.config/: dotnet-tools.json
.github/: FUNDING.yml
ast/: all.html  enum.Expr.html  enum.Stmt.html  index.html  sidebar-items.js
ast_interp/: all.html  enum.AstInterpError.html  fn.eval.html  fn.eval_expr.html  fn.execute.html  index.html  sidebar-items.js  type.AstInterpResult.html
ast_to_bytecode/: all.html  fn.ast_to_bytecode.html  fn.expr_to_bytecode.html  fn.stmt_to_bytecode.html  index.html  sidebar-items.js
bytecode/: all.html  enum.Inst.html  index.html
bytecode_interp/: all.html  enum.InterpError.html  fn.execute.html  fn.i32_add.html  fn.i32_const.html  fn.main.html  fn.print_i32.html  fn.print_str.html  fn.str_const.html  index.html  sidebar-items.js  struct.Opts.html  type.InterpResult.html
crates/ast_interp/: Cargo.toml
crates/ast_interp/src/: entity.rs  lib.rs  main.rs
crates/ast_interp/src/snapshots/: ast_interp__tests__i32_lit.snap  ast_interp__tests__i32_lit_plus_i32_lit.snap  ast_interp__tests__i32_lit_plus_str_lit.snap  ast_interp__tests__str_lit.snap  ast_interp__tests__str_lit_plus_i32_lit.snap  ast_interp__tests__str_lit_plus_str_lit.snap  mylang_ast_interp__tests__i32_lit.snap  mylang_ast_interp__tests__i32_lit_plus_i32_lit.snap  mylang_ast_interp__tests__i32_lit_plus_str_lit.snap  mylang_ast_interp__tests__str_lit.snap  mylang_ast_interp__tests__str_lit_plus_i32_lit.snap  mylang_ast_interp__tests__str_lit_plus_str_lit.snap
crates/ast_to_bytecode/: Cargo.toml
crates/ast_to_bytecode/src/: lib.rs  main.rs
crates/ast_to_bytecode/src/snapshots/: ast_to_bytecode__tests__addition_to_bytecode.snap  ast_to_bytecode__tests__i32_lit_to_bytecode.snap  ast_to_bytecode__tests__print_i32_to_bytecode.snap  ast_to_bytecode__tests__print_str_to_bytecode.snap  ast_to_bytecode__tests__str_lit_to_bytecode.snap
crates/bytecode_compiler/: Cargo.toml
crates/bytecode_compiler/src/: lib.rs  main.rs
crates/bytecode_compiler/src/snapshots/: mylang_bytecode_compiler__tests__addition_to_bytecode.snap  mylang_bytecode_compiler__tests__i32_lit_to_bytecode.snap  mylang_bytecode_compiler__tests__print_i32_to_bytecode.snap  mylang_bytecode_compiler__tests__print_str_to_bytecode.snap  mylang_bytecode_compiler__tests__str_lit_to_bytecode.snap
crates/language_server/: Cargo.toml
crates/language_server/src/: lib.rs  main.rs  message.rs  notification.rs  receive.rs  request.rs  send.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  main.rs  result.rs  state.rs  transition.rs  with_pos.rs
crates/lexer/src/state/: i32.rs  keyword.rs  str.rs  symbol.rs
crates/lexer/src/state/snapshots/: mylang_lexer__state__i32__tests__i32_state.snap  mylang_lexer__state__str__tests__escape.snap  mylang_lexer__state__str__tests__newline.snap
crates/lexer/src/transition/: default.rs  i32.rs  initial.rs  keyword.rs  str.rs  symbol.rs
crates/lsp_server/: Cargo.toml  README.md
crates/lsp_server/src/: lib.rs  main.rs  message.rs  received_msg.rs  receiver.rs  responder.rs  send_msg.rs  sender.rs
crates/lsp_server/src/responder/: analyzer.rs  diagnostic.rs  handler.rs  range.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  main.rs  parse.rs  result.rs
crates/parser/src/parse/: expr.rs  program.rs  stmt.rs  term.rs
crates/vm/: Cargo.toml  README.md
crates/vm/src/: entity.rs  lib.rs  main.rs
crates/vm/src/snapshots/: mylang_vm__tests__i32_add.snap  mylang_vm__tests__i32_add_type_mismatch.snap  mylang_vm__tests__i32_add_underflow.snap
docs/: README.md
entity/: all.html  enum.Entity.html  enum.RuntimeTypeInfo.html  index.html  sidebar-items.js  struct.I32Entity.html  struct.StrEntity.html
examples/: build.ninja  hello  hello.mylang  hello.ps1
language-server/: package.json  pnpm-lock.yaml
language_server/: all.html  enum.TaskMsg.html  fn.changed_text.html  fn.handle_msg.html  fn.lex.html  fn.lex_and_report_errs.html  fn.lex_err_to_diagnostic.html  fn.locatable_to_json_range.html  fn.main.html  fn.publish_diagnostics.html  fn.receive_msgs.html  fn.receive_rpc_msg.html  fn.send_message.html  fn.send_notification.html  fn.text_document_text.html  fn.text_document_uri.html  fn.wait_for_initialize_msg.html  fn.wait_for_initialize_request.html  index.html  sidebar-items.js  struct.Message.html
lexer/: all.html  enum.LexErr.html  fn.lex.html  fn.mapping.html  fn.transition.html  index.html  sidebar-items.js  struct.Lex.html  trait.LexExt.html  trait.WithPosExt.html
lsp/: all.html  enum.LspMessage.html  index.html  sidebar-items.js
lsp_server/: all.html  fn.launch_lsp_server.html  fn.main.html  index.html  sidebar-items.js  struct.JsonRpcActor.html  struct.JsonRpcSendMsg.html  struct.LspActor.html  struct.LspSendMsg.html  struct.Msg.html  struct.MyActor.html
mylang/: __main__.py  add_wasm.py  wasmer_wrapper.py
mylang_ast/: all.html  enum.Expr.html  enum.Stmt.html  index.html  sidebar-items.js
mylang_ast_interp/: all.html  enum.AstInterpError.html  fn.eval_expr.html  fn.execute.html  index.html  sidebar-items.js  type.AstInterpResult.html
mylang_bytecode/: all.html  constant.VARIANTS.html  enum.Inst.html  enum.__Field.html  index.html  macro.try.html  sidebar-items.js  struct.__FieldVisitor.html  struct.__Visitor.html
mylang_bytecode_compiler/: all.html  fn.ast_to_bytecode.html  fn.expr_to_bytecode.html  fn.stmt_to_bytecode.html  index.html  sidebar-items.js
mylang_cli_ext/: all.html  enum.FileFormat.html  enum.InputFormat.html  fn.input_format_arg.html  fn.read.html  fn.read_from_stdin_or_file.html  fn.reader_from_stdin_or_file.html  fn.value_of_input_format.html  fn.write.html  fn.write_to_stdout_or_file.html  fn.writer_to_stdout_or_file.html  index.html  sidebar-items.js  static.FILE_FORMAT_PARSER.html  static.FILE_FORMAT_POSSIBLE_VALUES.html  (+4 more)
(+718 files in other folders)
