[workspace]
members = [
    "crates/ast",
    "crates/ast_interp",
    "crates/ast_to_bytecode",
    "crates/bytecode",
    "crates/bytecode_interp",
    "crates/entity",
    "crates/language_server",
    "crates/lexer",
    "crates/lsp",
    "crates/lsp_server",
    "crates/parser",
    "crates/token",
]
