[tool.poetry]
name = "mylang"
version = "0.1.0"
description = ""
authors = ["0918nobita <nobita.0918@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wasmer = "^1.0.0"
wasmer-compiler-cranelift = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
namespace_packages = true
explicit_package_bases = true
