[package]
name = "mylang_ast_interp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["cargo"] }
mylang_ast = { path = "../ast" }
mylang_cli_ext = { path = "../cli_ext" }
mylang_token = { path = "../token" }
thiserror = "1.0.40"

[dev-dependencies]
insta = "1.29.0"
