[package]
name = "mylang_ast_interp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["cargo"] }
mylang_ast = { path = "../ast" }
mylang_cli_ext = { path = "../cli_ext" }
mylang_token = { path = "../token" }
thiserror = "1.0.44"

[dev-dependencies]
insta = "1.31.0"
