[package]
name = "ast_to_bytecode"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
ast = { path = "../ast" }
bincode = "1.3.3"
bytecode = { path = "../bytecode" }
clap = { version = "3.0.14", features = ["derive"] }
serde_json = "1.0.79"
token = { path = "../token" }

[dev-dependencies]
insta = "1.12.0"
