[package]
name = "mylang_bytecode_compiler"
version = "0.1.0"
edition = "2021"
description = "Compiler implementation for mylang that converts AST to bytecode"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.12", features = ["cargo"] }
mylang_ast = { path = "../ast" }
mylang_bytecode = { path = "../bytecode" }
mylang_cli_ext = { path = "../cli_ext" }
mylang_token = { path = "../token" }

[dev-dependencies]
insta = "1.15.0"
