[package]
name = "mylang_bytecode_compiler"
version = "0.1.0"
edition = "2021"
description = "Compiler implementation for mylang that converts AST to bytecode"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["cargo"] }
mylang_ast = { path = "../ast" }
mylang_bytecode = { path = "../bytecode" }
mylang_cli_ext = { path = "../cli_ext" }
mylang_token = { path = "../token" }

[dev-dependencies]
insta = "1.26.0"
