[package]
name = "language_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
ast = { path = "../ast" }
env_logger = "0.9.0"
lexer = { path = "../lexer" }
log = "0.4.14"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
token = { path = "../token" }

[dependencies.tokio]
version = "1.16.1"
features = [
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
]
