[package]
name = "mylang_lexer"
authors = ["Kodai Matsumoto <nobita.0918@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.74"
clap = { version = "4.3.21", features = ["cargo", "derive"] }
itertools = "0.11.0"
mylang_cli_ext = { path = "../cli_ext" }
mylang_token = { path = "../token" }
thiserror = "1.0.44"
utf8-chars = "3.0.0"

[dev-dependencies]
insta = "1.31.0"
