[package]
name = "mylang_lsp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
anyhow = "1.0.72"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.19"
mylang_ast = { path = "../ast" }
mylang_lexer = { path = "../lexer" }
mylang_parser = { path = "../parser" }
mylang_token = { path = "../token" }
regex = "1.9.1"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
valq = "0.1.0"

[dependencies.tokio]
version = "1.29.1"
features = ["io-std"]
