[package]
name = "mylang_lsp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
anyhow = "1.0.74"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
mylang_ast = { path = "../ast" }
mylang_lexer = { path = "../lexer" }
mylang_parser = { path = "../parser" }
mylang_token = { path = "../token" }
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
valq = "0.1.0"

[dependencies.tokio]
version = "1.31.0"
features = ["io-std"]
