[package]
name = "mylang_parser"
version = "0.1.0"
edition = "2021"
description = "Parser implementation for mylang that converts sequence of tokens to AST"

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
clap = { version = "4.2.0", features = ["cargo"] }
itertools = "0.10.5"
mylang_ast = { path = "../ast" }
mylang_cli_ext = { path = "../cli_ext" }
mylang_token = { path = "../token" }
serde_json = "1.0.95"
thiserror = "1.0.40"
