[package]
name = "mylang_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
clap = { version = "4.3.18", features = ["cargo"] }
mylang_bytecode = { path = "../bytecode" }
mylang_cli_ext = { path = "../cli_ext" }
serde_json = "1.0.103"
thiserror = "1.0.43"

[dev-dependencies]
insta = "1.31.0"
