[package]
name = "mylang_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.3.21", features = ["cargo"] }
mylang_bytecode = { path = "../bytecode" }
mylang_cli_ext = { path = "../cli_ext" }
serde_json = "1.0.105"
thiserror = "1.0.47"

[dev-dependencies]
insta = "1.31.0"
